# libptp

./: ChangeLog  Makefile  Makefile.am  README  TODO  autogen.sh  config.h.in  configure.in  dx3500  main.c  ptp_usb.h
doc/: CANON_PTP.txt
m4/: byteorder.m4  stdint.m4
src/: Makefile.am  myusb.c  properties.c  ptp-pack.c  ptp.c  ptp.h  ptpcam.c  ptpcam.h
